version 0.8.1 - dd-MMM-2009
 . ActionManager: doesn't delete running actions (issue #481)
 . Box2d: using google code r10 (v2.1.0) (issue #494)
 . CocosDenshion: resumeBackground music (issue #513)
 . MultiplexLayer: removes child using cleanup:YES (issue #466)
 . Particles: no negative size (issue #514)
 . Resources: added new cocos2d logos (issue #521)

version 0.8.1-rc - 19-Ago-2009
 . All: Using nonatomic properties (issue #509)
 . ActionManager: fixed crash (issue #490)
 . Actions: RotateTo always rotates to shortest angle fix (issue #499)
 . Box2d: using google code r8 (issue #494)
 . Box2d: added box2dTestBed (part of issue #494)
 . CocosDenshion: correct channel in SimpleAudioEngine (issue #465)
 . CocosDenshion: update buffer status after deletion ( issue #486)
 . CocosDenshion: SimpleAudioEngine can stop sounds (issue #498)
 . Parallax: update children at draw (issue #471)
 . TileMap: TMX maps starts at 0,0 position (part of issue #462)
 . TileMap: TMX getter/setters works OK with async maps (issue #506)
 . TileMap: anchorPoint works OK (issue #508)
 . XCode: COCOS2D_DEBUG used instead of DEBUG (issue #507)
 
version 0.8.1-beta - 10-Ago-2009
 . BitmapFontAtlas: .png image can be in subfolders (issue #464)
 . Box2d: possibility to call world.DrawDebugData() from draw (issue #493)
 . Box2d: updated box2d repository. using r228 (issue #494)
 . CocosNode: parent is set to nil only after calling onExit (issue #476)
 . CocosNode: added user data (issue #482)
 . CocosLive: added support to request current ranking (issue #495)
 . MotionStreak: moved from experimental to stable. uses v0.8 API (issue #484)
 . MotionStreak: by default uses GL_SRC_ALPHA blend function (issue #405)
 . ParticleView: integrated Particle visual editor (issue #480)
 . Parallax: more precise absolute coords (issue #471)
 . RenderTexture: let's you render CocosNode objects into a texture (issue #XXX)
 . Template: added XCode cocos2d Template (issue #469)